osd: do_sparse_read(): On Checksum mismatch try to repair

Fixes: http://tracker.ceph.com/issues/24875

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 929f78ab895e63667c36e57cc44d14a1402f4f9d)